corrected row gaps problem

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -12,6 +12,8 @@ $control-height: 2.5rem;
 
     @include xl {
         width: 100%;
+        height: 100%; 
+        position: fixed;       
         padding: 0;        
     }
 }
@@ -159,7 +161,7 @@ $control-height: 2.5rem;
 // the other for the photo collection.  this format is for xl screens 
 // only
 @include xl {
-    .main {
+    .main {      
         display: flex;
         padding: 0.5rem;
         height: calc(100vh - 10rem);
@@ -281,6 +283,7 @@ $control-height: 2.5rem;
 
  .photo-collection .heading {
     width: 100%;
+   
     font-size: 1.1rem;
     color: map-get($colors, 'dark-pink');
     padding-top: 0.75rem;
@@ -303,6 +306,18 @@ $control-height: 2.5rem;
     @include md {
         margin: 0 auto;      
     }
+
+    @include xl {
+        padding-top: 1rem;
+        padding-bottom: 0.75rem;
+    }
+ }
+
+ .selected-photos-wrapper {
+    @include xl {       
+        height: 28rem;
+        overflow: auto;
+    } 
  }
 
  //set up flex container for md, lg and xl screens for the photo collection
@@ -313,32 +328,23 @@ $control-height: 2.5rem;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        align-content: flex-start;
         gap: 1rem;
-        height: auto; 
-        background-color: blue;      
-    }
-
-    @include xl {
-        height: 30rem;
-        overflow-y: auto;
-    }
-
-    
+        height: auto;            
+    } 
  }
 
 //flex item for the above flex container
  .photo-collection .selected-photos .photo-box {
-  //  margin-top: 1rem;
+    margin-top: 1rem;
   
     @include md {
        width: 40%;       
     }
 
     @include xl {
-        width: 30%;
-        // flex: 1;
-        // max-width: 22%;
-        // max-height:2rem;
+        margin-top: 0;
+        width: 22%; 
     }
  }
 
